# calculator.c

./: CMakeLists.txt  Makefile  README.md
src/: main.c
src/interpreter/: CMakeLists.txt  interpreter.c  interpreter.h
src/lexer/: CMakeLists.txt  lexer.c  lexer.h  token.c  token.h
src/parser/: CMakeLists.txt  ast.h  parser.c  parser.h
src/utils/: CMakeLists.txt  stringBuffer.c  stringBuffer.h
